Closed
Bug 12921
Opened 27 years ago
Closed 27 years ago
IMAP: Clicking on imap host server creates second Inbox if one already exists
Categories
(MailNews Core :: Backend, defect, P3)
MailNews Core
Backend
Tracking
(Not tracked)
VERIFIED
FIXED
M11
People
(Reporter: jefft, Assigned: jefft)
Details
Steps to reproduce the problem:
o Bring up 3-pane mail window
o Expand an existing Imap account by clicking on the {+} sign
o Make sure there is an Inbox folder
o Select the imap host. Notice that a second Inbox gets created.
Status: ASSIGNED → RESOLVED
Closed: 27 years ago
Resolution: --- → FIXED
Call CreateClientSubFolderInfo() if and only if we haven't done discover all
folders and we don't have any sub folders. nsImapMailFolder.cpp changed.
OK using 1999-11-09-11m11 commercial builds NT 4.0 and Linux 6.0
OK using 1999-11-08-08m11 commercial build Mac OS 8.5.1
Updated•21 years ago
|
Product: MailNews → Core
Updated•18 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•