fixed bug 12921, 12922 - duplicate folders in folder view